Changelog
=========

Version 1.1
-----------

(upcoming release)

- document logging feature


Version 1.0
-----------

- initial release.