@@ -6,6 +6,7 @@ Version 1.1
 
 (upcoming release)
 
+- add support for rational representations of GL(n)
 - document logging feature
 
 
